--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 <body>
     <header>
-        <div class="header-menu"></div>
-            <h1>Marcelo Calderoni</h1>
-            <nav>
+            <h1 class="my-name">Marcelo Calderoni</h1>
+            <nav class="nav-menu">
                 <ul>
                     <li>About Me</li>
                     <li>Work</li>
@@ -18,33 +17,53 @@
                     <li>Resume</li>
                 </ul>
             </nav>
-        </div>
-        <div class="header-banner">
-            <img src="none"/>
-            <h2>Banner Subtitle</h2>
-        </div>
     </header>
 
     <main>
-        <article>
-            <h3>About Me</h3>
-            <p>Prueba</p>
-        </article>
+        <div class="banner">
+            <img src="./assets/images/Mario img.webp" alt="banner-Image"/>
+            <h2 class="subtitle">This is my work!</h2>
+        </div>
+        <section>
+            <article class="main-content">
+                <h3 class="about">About Me</h3>
+                <p>With a decade of experience in logistics, I have developed a deep understanding of the industry and honed my skills in financial management and strategy.
+                     My brokerage provides logistics services such as sea, land, and air freight, as well as customs, in the US and Mexico. We are transparent in our pricing and 
+                     committed to providing excellent customer service, while working towards automation for greater efficiency. We hold freight broker authority in the US and are 
+                     rapidly growing in Mexico. My previous experience running an import business has given me valuable insight into the logistical challenges faced by businesses, 
+                     and has enabled me to provide effective solutions to clients. Let me help you streamline your logistics operations and drive growth for your business. </p>
+            </article>
 
-        <article>
-            <h3>Work</h3>
-            <p>Prueba</p>
-        </article>
+            <section class="projects-section">
+                <h3 class="work">Work</h3>
+                <section class="apps">
 
-        <article>
-            <h3>Contact Me</h3>
-            <p>Prueba</p>
-        </article>
+                    <div class="project">
+                        <a href="https://caldermoney.github.io/ADVANCED-CSS-CHALLENGE/">
+                            <img src="./assets/images/banner1.jpg" alt="CSS Challenge"></a>
+                        <h4 class="project-name">Advanced CSS Challenge</h4>
+                    </div>
 
-        <article>
-            <h3>Resume</h3>
-            <p>Prueba</p>
-        </article>
+                    <div class="project">
+                        <a href="https://caldermoney.github.io/HTML-GIT-CSS-CHALLENGE/">
+                            <img src="./assets/images/banner2.jpg" alt="HTML Challenge"></a>
+                        <h4 class="project-name">HTML, CSS & HTML-GIT-CSS-CHALLENGE</h4>
+                    </div>
+
+                </section>
+
+            </section>
+
+            <article class="main-content">
+                <h3>Contact Me</h3>
+                <p>Prueba</p>
+            </article>
+
+            <article class="main-content">
+                <h3>Resume</h3>
+                <p>Prueba</p>
+            </article>
+        </section>
     </main>
 
     <footer>
