--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,66 +9,61 @@
 </head>
 <body>
     <header>
-            <h1 class="my-name">Marcelo Calderoni</h1>
-            <nav class="nav-menu">
-                <ul>
-                    <li>About Me</li>
-                    <li>Work</li>
-                    <li>Contact Me</li>
-                    <li>Resume</li>
-                </ul>
-            </nav>
+      <h1 class="my-name">Marcelo Calderoni</h1>
+      <nav class="nav-menu">
+        <ul>
+            <li><a href="#About">About Me</a></li>
+            <li><a href="#myProjects">Work</a></li>
+            <li><a href="#contact">Contact Me</a></li>
+        </ul>
+      </nav>
     </header>
-
+  
     <main>
-        <div class="banner">
-            <img src="./assets/images/Mario img.webp" alt="banner-Image"/>
-            <h2 class="subtitle">This is my work!</h2>
-        </div>
-        <section>
-            <article class="main-content">
-                <h3 class="about">About Me</h3>
-                <p>With a decade of experience in logistics, I have developed a deep understanding of the industry and honed my skills in financial management and strategy.
-                     My brokerage provides logistics services such as sea, land, and air freight, as well as customs, in the US and Mexico. We are transparent in our pricing and 
-                     committed to providing excellent customer service, while working towards automation for greater efficiency. We hold freight broker authority in the US and are 
-                     rapidly growing in Mexico. My previous experience running an import business has given me valuable insight into the logistical challenges faced by businesses, 
-                     and has enabled me to provide effective solutions to clients. Let me help you streamline your logistics operations and drive growth for your business. </p>
-            </article>
-
-            <section class="projects-section">
-                <h3 class="work">Work</h3>
-                <section class="apps">
-
-                    <div class="project">
-                        <a href="https://caldermoney.github.io/ADVANCED-CSS-CHALLENGE/">
-                            <img src="./assets/images/banner1.jpg" alt="CSS Challenge"></a>
-                        <h4 class="project-name">Advanced CSS Challenge</h4>
-                    </div>
-
-                    <div class="project">
-                        <a href="https://caldermoney.github.io/HTML-GIT-CSS-CHALLENGE/">
-                            <img src="./assets/images/banner2.jpg" alt="HTML Challenge"></a>
-                        <h4 class="project-name">HTML, CSS & HTML-GIT-CSS-CHALLENGE</h4>
-                    </div>
-
-                </section>
-
-            </section>
-
-            <article class="main-content">
-                <h3>Contact Me</h3>
-                <p>Prueba</p>
-            </article>
-
-            <article class="main-content">
-                <h3>Resume</h3>
-                <p>Prueba</p>
-            </article>
+      <div class="banner">
+        <img src="./assets/images/Mario img.webp" alt="banner-Image"/>
+        <h2 class="subtitle">This is my work!</h2>
+      </div>
+      <section>
+        <article class="main-content">
+          <h3 id="About" class="about">About Me</h3>
+          <p>
+            With a decade of experience in logistics, I have developed a deep understanding of the industry and honed my skills in financial management and strategy. My brokerage provides logistics services such as sea, land, and air freight, as well as customs, in the US and Mexico. We are transparent in our pricing and committed to providing excellent customer service while working towards automation for greater efficiency. We hold freight broker authority in the US and are rapidly growing in Mexico. My previous experience running an import business has given me valuable insight into the logistical challenges faced by businesses and has enabled me to provide effective solutions to clients. Let me help you streamline your logistics operations and drive growth for your business.
+          </p>
+        </article>
+  
+        <section  id="myProjects" class="projects-section">
+          <h3  class="work">Work</h3>
+          <section class="apps">
+  
+            <div class="project">
+              <a href="https://caldermoney.github.io/ADVANCED-CSS-CHALLENGE/">
+                <img src="./assets/images/banner1.jpg" alt="CSS Challenge">
+              </a>
+              <h4 class="project-name">Advanced CSS Challenge</h4>
+            </div>
+  
+            <div class="project">
+              <a href="https://caldermoney.github.io/HTML-GIT-CSS-CHALLENGE/">
+                <img src="./assets/images/banner2.jpg" alt="HTML Challenge">
+              </a>
+              <h4 class="project-name">HTML, CSS & HTML-GIT-CSS-CHALLENGE</h4>
+            </div>
+  
+          </section>
+  
         </section>
+      </section>
     </main>
-
+  
     <footer>
-
+      <article id="contact" class="contact">
+        <h3>Contact Me</h3>
+        <ul>
+          <li>Phone #: +52 811 591 9822</li>
+          <li>E-mail: marcelo@transvectologistics.com</li>
+        </ul>
+      </article>
     </footer>
-</body>
-</html>
+  </body>
+  </html>
