--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS Snipet Cheatsheet</title>
+  <title>Portofolio Website</title>
   <link rel="stylesheet" href="./assets/css/style.css"/>
 </head>
 <body>
     <header>
-      <h1 class="my-name">Marcelo Calderoni</h1>
+      <img src="./assets/images/s-l1600.jpg" alt="It's me Mario!" style="width:100px">
+      <h1 class="my-name">Mario Bros</h1>
       <nav class="nav-menu">
         <ul>
             <li><a href="#About">About Me</a></li>
@@ -21,7 +22,7 @@
   
     <main>
       <div class="banner">
-        <img src="./assets/images/Mario img.webp" alt="banner-Image"/>
+        <img src="./assets/images/super-mario-bros-banner-1-1280x720.jpg" alt="banner-Image"/>
         <h2 class="subtitle">This is my work!</h2>
       </div>
       <section>
